# EDTickMonitor

./: .gitignore  CMakeLists.txt  README.md  qt.cmake
src/: CMakeLists.txt  edsm.cpp  edsm.hpp  main.cpp  tickmonitor.cpp  tickmonitor.hpp
